--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ flake8 = "^5.0.4"
 isort = "^5.10.1"
 pygount = "^1.4.0"
 bandit = "^1.7.4"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
