--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ isort = "^5.10.1"
 pygount = "^1.4.0"
 bandit = "^1.7.4"
 pytest = "^7.1.3"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
