--- a/.github/workflows/branch.yaml
+++ b/.github/workflows/branch.yaml
@@ -52,4 +52,4 @@ jobs:
       - name: Run flake8
         run: poetry run flake8 .
       - name: Run bandit
-        run: poetry run bandit .
+        run: poetry run bandit -r punsctl/
