--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "punsctl"
 version = "0.2.1"
 description = "POSIX User's Namespace Control"
-authors = ["Aleksandar Buza <me@aleksandarbuza.com>"]
+authors = ["Aleksandar Buza <tech@aleksandarbuza.com>"]
 license = "ISC"
 readme = "README.md"
 homepage = "https://github.com/alekbuza/punsctl"
