--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,30 +1,25 @@
-name: Release
+---
+name: release
 on:
   release:
     types:
       - created
-
 jobs:
   publish:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8"]
-        poetry-version: ['1.1.13']
+        python-version: ["3.10"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
-      - name: Publish
+      - run: pipx install poetry
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        run: |
+      - run: |
           poetry config pypi-token.pypi $PYPI_TOKEN
           poetry publish --build
