--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,30 +1,18 @@
-name: Release
+---
+name: release
 on:
   release:
     types:
       - created
-
 jobs:
   publish:
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8"]
-        poetry-version: ['1.1.13']
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
-      - name: Publish
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v3
+      - run: uv python install $PYTHON_VERSION
+        env:
+          PYTHON_VERSION: "3.12"
+      - run: uv publish --token $PYPI_TOKEN
         env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        run: |
-          poetry config pypi-token.pypi $PYPI_TOKEN
-          poetry publish --build
