--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
 name = "punsctl"
-version = "0.2.3"
+version = "0.2.4"
 description = "POSIX User's Namespace Control"
 readme = {file = "README.md", content-type = "text/markdown"}
-license = {file = "LICENSE"}
+license = "ISC"
+license-files = ["LICENSE"]
 authors = [
   {name = "Aleksandar Buza", email = "tech@aleksandarbuza.com"},
 ]
